[package]
name = "stripe"
version = "0.1.0"
authors = ["Nick Cardin <nick@cardin.email>"]
keywords = ["stripe", "v1", "api"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.5"
base64 = "0.10"
reqwest = "=0.9.17"
failure = "0.1"

[dependencies.resx]
git = "https://github.com/spotlease/resx"
rev = "1cbe61f60ddb1fddd9b7fa8a0f9b7133cebc1567"

[dependencies.resx_derives]
git = "https://github.com/spotlease/resx"
rev = "1cbe61f60ddb1fddd9b7fa8a0f9b7133cebc1567"