[package]
name = "stripe"
version = "0.1.0"
authors = ["Nick Cardin <nick@cardin.email>"]
keywords = ["stripe", "v1", "api"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.7"
base64 = "0.11"
reqwest = { version = "0.9", default-features = false, features = ["rustls-tls"] }
failure = "0.1"
log = "0.4"

[dependencies.resx]
git = "https://github.com/spotlease/resx"
rev = "0c7584d50cfcfe5c458638318a41196db306f6b1"

[dependencies.resx_derives]
git = "https://github.com/spotlease/resx"
rev = "0c7584d50cfcfe5c458638318a41196db306f6b1"